# GryBoty

./: .gitignore  Jenkinsfile  LICENSE  README.md  bots.md  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
backend/app/: main.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/utils/: authentication.py
backend/src/app/: config.py  dependencies.py  main.py
backend/src/app/models/: bot.py  game.py  game_type.py  match.py  tournament.py  user.py
backend/src/app/routers/: admin.py  bots.py  game_types.py  games.py  matches.py  tournaments.py  users.py
backend/src/app/schemas/: bot.py  game.py  game_type.py  match.py  tournament.py  user.py
backend/src/app/utils/: authentication.py  connection.py  database.py  docker.py  run_docker.py
backend/src/database/: bots.py  example.py  main.py  setup.py
backend/tests/: conftest.py  test_authentication.py  test_bot.py  test_database.py  test_dependencies.py  test_game.py  test_game_type.py  test_main.py  test_match.py  test_tournament.py  test_user.py  test_users.py
bots/: README.md
bots/src/app/services/: bot_runner.py
database/: database-diagram.md  example.py  main.py
docker/: Dockerfile  README.md  main.py  mini_max_bot.py  requirements.txt
docker/src/app/services/: bot_runner.py  file_loader.py
docker/src/app/services/file_loader/: file_loader.py
docker/src/app/services/file_visitor/: hierarchy_visitor.py  inheritance_analyzer.py
docker/src/app/services/run_game/: bot_runner.py
docker/src/app/services/validation/: bot_game_validator.py  bot_runtime_validator.py  bot_safety_validator.py  bot_validation.py  runtime_validation.py  validator_base_class.py
docker/src/app/utils/: class_retriever.py
docker/src/bots/example_bots/: example_bot.py
docker/src/bots/example_bots/SixMensMorris/: bot_1.py
docker/src/bots/example_bots/testing_bots/: bot_1.py  bot_2.py  mini_max_bot.py
docker/src/two_player_games/: game.py  state.py
docker/src/two_player_games/games/: Pick.py  connect_four.py  dots_and_boxes.py  morris.py  nim.py
docker/tests/: docker_test.py  test_api.py  test_app_service_bot_runner.py  test_app_service_bot_validator.py  test_app_service_file_loader.py  test_app_service_game_dynamic.py  test_app_service_game_matching.py  test_app_service_inheritance_analyzer.py  test_app_service_validation.py
docker/tests/sample_bots/game_match/: bot_2_get_moves.py  correct_bot.py  correct_bot_2.py  correct_bot_3.py  invalid_get_move.py  invalid_get_move_name.py  invalid_get_move_name_self.py  invalid_move_type.py  invalid_move_type_int.py  invalid_move_type_none.py  multiple_inheritance.py  no_class.py  no_get_move.py  no_inheritance.py  syntax_error.py  valid_bot_not_affecting.py
docker/tests/sample_bots/unsafe_behaviour/: extended_bot.py  remote_access.py  runtime_error.py  slow_bot.py  typical.py  unauthorized_access.py
docker/two_player_games/: game.py  state.py
docker/two_player_games/games/: Pick.py  connect_four.py  dots_and_boxes.py  morris.py  nim.py
docs/: user_story.drawio
docs/architecture/: README.md  workspace.dsl
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/ui/: alert.jsx
frontend/tests/: test.js
tests/: test_app_service_bot_runner.py
