[build-system]
requires = ["fastapi[standard]", "passlib[bcrypt]", "pydantic-settings", "pyjwt", "pymongo", "pyobjectid", "setuptools", "wheel", "pytest", "pytest-cov", "mypy", "flake8", "mongomock"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=src/app"
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
mypy_path = "src/app"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
