[metadata]
name = gry_boty
description = FastAPI-based backend for gry_boty
platforms = linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    app
install_requires =
    setuptools>=59.6.0
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
app = py.typed

[flake8]
max-line-length = 160
