[metadata]
name = gry_boty
description = FastAPI-based backend for gry_boty
platforms = linux
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
install_requires =
    bcrypt==4.0.1
    fastapi[standard]>=0.115.6
    passlib[bcrypt]>=1.7.4
    pydantic-settings>=2.7.0
    PyJWT>=2.10.1
    pymongo>=4.9.2
    pyobjectid>=0.1.3
    requests>=2.32.3
    setuptools>=59.6.0
    types-requests>=2.32.0
    wheel>=0.45.1
python_requires = >=3.10
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-asyncio>=0.25.2
    mypy>=0.910
    flake8>=3.9
    mongomock>=4.3.0

[options.package_data]
app = py.typed
database = py.typed

[flake8]
max-line-length = 160
